new buildFrom method overload